[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entitymatch"
version = "0.1.0"
description = "Semantic entity matching with geographic blocking and LLM validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Anthony Howell" },
]
keywords = [
    "entity-matching",
    "record-linkage",
    "data-matching",
    "sentence-transformers",
    "embeddings",
    "llm",
    "blocking",
    "deduplication",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.2.0",
    "torch>=1.13.0",
]

[project.optional-dependencies]
llm = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "nest-asyncio>=1.5.0",
]
openai = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "nest-asyncio>=1.5.0",
]
anthropic = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "nest-asyncio>=1.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "entitymatch[llm,dev]",
]

[project.urls]
Homepage = "https://github.com/AntJam-Howell/entitymatch"
Repository = "https://github.com/AntJam-Howell/entitymatch"
Issues = "https://github.com/AntJam-Howell/entitymatch/issues"

[tool.setuptools.packages.find]
include = ["entitymatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
